# Role-Vector

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/skills/lit-scan/: SKILL.md
.claude/skills/paper-draft/: SKILL.md
.claude/skills/role-extract/: SKILL.md
.claude/skills/role-judge/: SKILL.md
.claude/skills/run-all/: SKILL.md
.claude/skills/steer-inject/: SKILL.md
.claude/skills/vector-metrics/: SKILL.md
.github/workflows/: ci.yml
data/: questions.yaml  questions_bigfive.yaml  roles.yaml  roles_bigfive.yaml
docs/: auto-research-survey.md  future-work.md  ndif-setup.md  zotero-setup.md
scripts/: README.md  rolevec_extract_tl.sbatch  rolevec_smoke_1gpu.sbatch  run_on_cluster.sbatch  setup_cluster_env.sh  transfer_launch.sh
src/rolevec/: __init__.py  backends.py  config.py  data.py  extract.py  judge.py  metrics.py  pipeline.py  run_all.py  steer.py  zotero.py
templates/: paper_template.tex  refs.bib
tests/: test_metrics.py  test_steer.py
