[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rolevec"
version = "0.1.0"
description = "Construct-validation pipeline for LLM agent personas (Role Vector Validation)."
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pyyaml>=6.0"]

[project.optional-dependencies]
transformer_lens = ["transformer-lens>=2.0", "torch>=2.2", "transformers>=4.44"]
nnsight = ["nnsight>=0.3", "torch>=2.2", "transformers>=4.44"]

[tool.setuptools.packages.find]
where = ["src"]
